	-	Finished dynamic rendering pages from url hash change.
	- Finished rendering different structures of pages.
	- TODO: css styling of the inner pages.
	- TODO: Dynamic page rendering further debug.

15 February
- *Backend*:
  - Added parsing for audio and video
	- Fiinished connecting up the backend and frontend.
	- TODO: Parsing for container contents in markdown (choice view and recipe view)

17 February
- *Frontend*:
  - Finished most of the structural css styling.
	- Improved Node wandering functions by adding a NodeHistory object.
	- TODO: pre-download media of one page ahead to minimize latancy of image loading between nodes.
	- TODO: More css styling after getting comments from Cristina.
- *Backend*:
  - Completed all custom markdown parsing: gallery tag, section tag, video tag, audio tag and side-by-side sections (left tag and right tag).
	- Added a route to dynamically grab media from server.

20 February
- *Frontend*:
  - Cache downloaded media. Nodes are no longer cloned but moved between the content container and hidden container with the id "#cache".
	- Media will be downloaded one page before, so to decrease time for the audience to wait for media to download when they switch page.
	- Horizontal scroll are set to be passive (if this feature is found in the browser) to improve performance for the browser to handle the "wheel" event with the native code.
- *Backend*:
  - FIXED BUG: Wrong return value of the get route that causes sinatra to interpret it as a rack respond, yielding an error to process it.
	- Rendering changed so to adhere to the cache download media feature.

21 February
- *Frontend*:
  - Added popup gallery image function. (tested)
	- Added popup pdf function. (not yet tested)
- *Backend*:
  - Added markdown parsing for pdf
	- Added popup container in haml for image and pdf popups.

22 February
- *Frontend*:
  - complete most css styles, including showing pdf
- *Backend*:
  - Finished debugging parsing for pdf tag in markdown.