@@ -1,4 +1,4 @@
-import * as Render from "./renderer.js";
+import * as Render from "./pages.js";
 import { NavigationBar } from "./navigationBar.js";
 import { NodeWalker } from "./nodeWalker.js";
 import { ENTRY_NODE_ID } from "./constants.js";
